--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,107 +1,255 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Rock+Salt&family=Square+Peg&display=swap");
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+html,
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Lato", sans-serif;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #333333;
 }
 
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+h1 {
+  font-size: 2.5rem;
+  font-weight: 300;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+h2 {
+  font-size: 1.75rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1.125rem;
+  font-weight: 400;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: inherit;
+  font-size: 1rem;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+body {
+  background-color: #fff;
+  min-height: 100vh;
+  color: #333333;
+}
+
+body > div {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.header {
+  padding: 0px 40px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(88, 177, 159, 1) 94%
+  );
+  padding-bottom: 20px;
+}
+
+.header > .text {
+  text-transform: uppercase;
+  width: 500px;
+}
+
+.header > nav {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.header > nav > img {
+  margin-right: 20px;
+  height: 80px;
+  width: auto;
+}
+
+.header > nav > .link-block > a {
+  margin-right: 10px;
+  color: #fff;
+  transition: all 0.2s;
+}
+
+.header > nav > .link-block > a:hover {
+  text-decoration: underline;
+}
+
+.main-container {
+  padding: 40px;
+  min-height: 100vh;
+}
+
+.main-container > .home-component > div {
+  display: flex;
+  margin-bottom: 40px;
+  justify-content: space-between;
+}
+
+.main-container > .home-component > div:nth-of-type(even) {
+  flex-direction: row-reverse;
+  padding-left: 80px;
+}
+
+.main-container > .home-component > div:nth-of-type(odd) {
+  padding-right: 80px;
+}
+
+.main-container > .home-component > div > img {
+  margin-right: 20px;
+  width: 500px;
+  height: 500px;
+}
+
+.main-container > .home-component > div > .event-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 40%;
+  min-width: 500px;
+  padding: 0 20px;
+}
+
+.main-container > .home-component > div > .event-info > a > h2 {
+  margin-top: 0;
+}
+
+.main-container > .home-component > div > .event-info > a > h2:after {
+  content: " ";
+  height: 5px;
+  width: 100%;
+  background-color: #58b19f;
+  display: block;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.main-container > .events-component > h1 {
+  margin-bottom: 20px;
+}
+
+.main-container > .events-component > h1:after {
+  content: " ";
+  height: 5px;
+  width: 400px;
+  background-color: #58b19f;
+  display: block;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.main-container > .events-component > div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  row-gap: 20px;
+  column-gap: 20px;
+}
+
+.main-container > .events-component > div > a > img {
+  width: 100%;
+  max-height: 500px;
+  height: 100%;
+}
+
+.main-container > .events-category > div {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  column-gap: 40px;
+  row-gap: 40px;
+}
+
+.main-container > .events-category > h1 {
+  margin-bottom: 20px;
+}
+
+.main-container > .events-category > h1:after {
+  content: " ";
+  height: 5px;
+  width: 500px;
+  background-color: #58b19f;
+  display: block;
+  margin-bottom: 20px;
+  margin-top: 5px;
+}
+
+.main-container > .events-category > div > a > img {
+  width: 100%;
+}
+
+.main-container > .events-category > div > a:after {
+  content: " ";
+  height: 3px;
+  width: 100%;
+  background-color: #58b19f;
+  display: block;
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.main-container > .event-detail > img {
+  width: 100%;
+  height: auto;
+  max-height: 500px;
+}
+
+.main-container > .event-detail > h2 {
+  margin-bottom: 20px;
+}
+
+.main-container > .event-detail > p {
+  margin-bottom: 20px;
+  margin-top: 10px;
+}
+
+.main-container > .event-detail > form > label {
+  font-size: 1.25rem;
+  margin-bottom: 5px;
+  display: inline-block;
+}
+
+.main-container > .event-detail > form > div {
+  display: flex;
+}
+
+.main-container > .event-detail > form > div > input {
+  font-size: 1.25rem;
+  padding: 5px;
+  width: 250px;
+  margin-right: 10px;
+  outline: none;
+  border-radius: 4px;
+}
+
+.main-container > .event-detail > form > div > button {
+  padding: 0 25px;
+  font-size: 1.125rem;
+  background: #58b19f;
+  border: 1px solid #333333;
+  outline: none;
+  cursor: pointer;
+  border-radius: 4px;
+  color: #fff;
+}
+
+.main-container > .event-detail > form > .info-message {
+  margin-top: 10px;
+}
+
+footer {
+  padding: 20px 40px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: #fff;
+  text-align: center;
 }
